--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ python-dateutil>=2.8.0
 tenacity>=8.2.0
 tldextract>=5.1.0
 
+# Google Drive
+google-api-python-client>=2.100.0
+google-auth>=2.23.0
+
 # Testing
 hypothesis>=6.92.0
 pytest>=7.4.0
