--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ tldextract>=5.1.0
 google-api-python-client>=2.100.0
 google-auth>=2.23.0
 
+# LLM Integration
+ollama>=0.4.0
+
 # Testing
 hypothesis>=6.92.0
 pytest>=7.4.0
